--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img class="img-responsive"  src="pizza.png">
         </div>
       <div class=menu_div>
-          <button id="menu_list" onclick=get__menu()>Show Menu</button>
+          <button id="menu_list" onclick="get__menu()">Show Menu</button>
           <div id="display_menu"></div>
       </div>
     </div>
